using System.Collections;
using System.Collections.Generic;
using UnityEngine;

    //contains tags , names, identifiers used in the game
    public class Tags
    {
    public const string Ver_Axis = "Vertical";
    public const string Hor_Axis = "Horizontal";
    public const string _moveLeft = "player_Can_Move_Left";
    public const string Stage_Collider = "collider";  //collider assigned to the collider object 
    public const string GameMan = "Game Manager";
    }

    public class AnimationTags
    {
        public const string Jump_Trig = "RunningJump";
        public const string Run = "Movement";
        public const string PlayerDeath = "Death";
        public const string Slide_Trig = "RunningSlide";
        public const string RunFlip_Trig = "RunForwardFlip";
        public const string TwistFlip_Trig = "FrontTwistFlip";
    }



